[project]
name = "ariadnesagents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "bcrypt==4.0.1",
    "cryptography>=44.0.0",
    "fastapi>=0.115.6",
    "httpx>=0.28.1",
    "jinja2>=3.1.5",
    "matplotlib>=3.10.0",
    "numpy>=2.2.1",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pymysql>=1.1.1",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.2",
    "python-jose>=3.3.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.37",
    "uvicorn>=0.34.0",
]
